feat(profile): expose skills grouped by category